[package]
name = "titanpack-dev-server"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]
log_request_stats = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true }
auto-hash-map = { workspace = true }
futures = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.9.0"
indexmap = { workspace = true, features = ["serde"] }
mime = { workspace = true }
mime_guess = "2.0.4"
once_cell = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
socket2 = "0.4.9"
tokio = { workspace = true }
tokio-stream = "0.1.9"
tokio-util = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1.2"

titan-tasks = { workspace = true }
titan-tasks-bytes = { workspace = true }
titan-tasks-fs = { workspace = true }
titan-tasks-hash = { workspace = true }
titanpack-core = { workspace = true }
titanpack-ecmascript = { workspace = true }
titanpack-ecmascript-hmr-protocol = { workspace = true }
# TODO remove this dependency
titanpack-cli-utils = { workspace = true }

[build-dependencies]
titan-tasks-build = { workspace = true }
